<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">Ks-messaging</string>
    <string name="app_package" translatable="false">com.kfunallday.ksmessaging</string>

    <string name="setup_title">Welcome to Ks-messaging</string>
    <string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
    <string name="setup_next">Next</string>
    <string name="setup_password_intro">Choose a Password</string>
    <string name="setup_password_explanation">Your Ks-messaging account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall Ks-messaging, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
    <string name="dnkm_doze_intro">To receive messages, Ks-messaging needs to stay connected in the background.</string>
    <string name="dnkm_doze_explanation">To receive messages, Ks-messaging needs to stay connected in the background. Please disable battery optimizations so Ks-messaging can stay connected.</string>
...

	<!-- Screenshots -->

	<!-- This is a name to be used in screenshots. Feel free to change it to a local name. -->
	<string name="screenshot_alice">Alice</string>
	<!-- This is a name to be used in screenshots. Feel free to change it to a local name. -->
	<string name="screenshot_bob">Bob</string>
	<!-- This is a name to be used in screenshots. Feel free to change it to a local name. -->
	<string name="screenshot_carol">Carol</string>
	<!-- This is a message to be used in screenshots. Please use the same translation for Bob! -->
	<string name="screenshot_message_1">Hi Bob!</string>
	<!-- This is a message to be used in screenshots. Please use the same translation for Alice! -->
	<string name="screenshot_message_2">Hi Alice! Thanks for telling me about Ks-messaging!</string>
...
